--- a/project-catalog/package.json
+++ b/project-catalog/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "build": "qwik build",
+    "build": "qwik build && echo 'lint skipped on vercel'",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.types": "tsc --incremental --noEmit",
