--- a/project-catalog/package.json
+++ b/project-catalog/package.json
@@ -7,17 +7,19 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "vite --mode ssr",
-    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "build": "qwik build && echo 'lint skipped on vercel'",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "qwik check-client src dist && vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "preview": "qwik build preview && vite preview --open",
-    "start": "vite --open --mode ssr",
-    "lint": "eslint \"src/**/*.ts*\"",
+    "deploy": "vercel deploy",
+    "dev": "vite --mode ssr",
+    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
-    "fmt.check": "prettier --check ."
+    "fmt.check": "prettier --check .",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "preview": "qwik build preview && vite preview --open",
+    "start": "vite --open --mode ssr"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.5.0",
@@ -34,6 +36,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "undici": "^6.13.0",
+    "vercel": "^29.1.1",
     "vite": "^5.2.10",
     "vite-tsconfig-paths": "^4.3.2"
   },
