--- a/.github/workflows/catalog-deploy.yml
+++ b/.github/workflows/catalog-deploy.yml
@@ -16,6 +16,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    needs: lint
     
     defaults:
       run:
@@ -103,7 +104,7 @@ jobs:
         run: pnpm install --no-frozen-lockfile
 
       - name: Run linter
-        run: pnpm lint
+        run: pnpm lint --max-warnings 0
 
       - name: Check types
         run: pnpm build.types
